# stock-advice-scrapper

./: README.md
app/: pyproject.toml
app/notebooks/: analyze.ipynb
app/scripts/: get_stock_advice.py
data/: old_stock_advice.csv  stock_advice.csv
