[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["vignesh-14052002 <vignesharivazhagan1409@gmail.com>"]
readme = "README.md"
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.36.0"
pandas = "^2.2.2"
aiohttp = "^3.9.5"
beautifulsoup4 = "^4.12.3"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
